plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.nungil'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.4'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    testImplementation 'org.springframework.security:spring-security-test'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:3.0.4'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'io.github.bonigarcia:webdrivermanager:5.5.0'
    implementation 'io.minio:minio:8.5.7'
    implementation 'org.springframework.boot:spring-boot-configuration-processor' // ConfigurationProperties 사용을 위한 의존성
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'org.springframework:spring-web'
    implementation "org.seleniumhq.selenium:selenium-java:4.28.0"
    implementation "org.seleniumhq.selenium:selenium-devtools-v132:4.28.0"
    implementation "org.springframework.boot:spring-boot-starter-actuator"
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.hankcs:hanlp:portable-1.8.6'


}

tasks.named('test') {
    useJUnitPlatform()
}
